--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer id='footer'>
     <div class='container'>
-        <p class='text-muted text-center'> Copyright 2015 Yeti & Cakeant</p>
+        <p class='text-muted text-center col-md-12'> Copyright 2015 Yeti & Cakeant</p>
     </div>
 </footer>
