--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <%= link_to 'DNSAdmin', root_path, class: 'navbar-brand' %>
+            <%= link_to 'DNSManager', root_path, class: 'navbar-brand' %>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
